--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Titch990, vertically-challenged technical writer</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Marjorie Jones!</h1>
-				<p>I'm <em>cool</em>. Trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:titch990@gmail.com">email</a></li>
-        		<li><a href="https://github.com/titch990">github.com/titch990</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
-4
+---
+layout: default
+title: Titch990, Vertically challenged technical writer
+---
+<div class="blurb">
+	<h1>Hi there, I'm Marjorie Jones</h1>
+	<p>I'm <em>cool</em>. Trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
