Trying out various things

--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@ title: Titch990, Vertically challenged technical writer
 <div class="blurb">
 	<h1>Hi there, I'm Marjorie Jones</h1>
 	<p>I'm <em>cool</em>. Trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I'm also testing some things which you can read about below. It would be nice if these lists could be auto-generated from all the files in one or more folders, but for now, let's hard-code them.<p>
+		<ol>
+			<li><p>An API page: <a href="/pages/existing-docs/list-user-resources.html">list user resources</a></p></li>
+			<li><p>A big page with nested ordered and unordered lists: <a href="/pages/existing-docs/quickstart.html">quickstart</a></p></li>
+			<li><p>A test page with lots of interesting things: <a href="/pages/test-content/test-page-1.html">test page 1</a></p></li>
+		</ol>
 </div><!-- /.blurb -->
