--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Titch990, Vertically challenged technical writer
 	<p>Here are some test topics. It would be nice if these lists could be auto-generated from all the files in one or more folders, but for now, let's hard-code them.<p>
 		<ol>
 			<li><p>A test page with lots of interesting things: <a href="/pages/test-content/test-page-1.html">test page 1</a></p></li>
+			<li><p>Another test page with alerts etc: <a href="/pages/toms-files/mydoc_alerts.html">alerts</a></p></li>
 			<li><p>A sample API page: <a href="/pages/existing-docs/list-user-resources.html">list user resources</a></p></li>
 			<li><p>An API page with a big table: <a href="/pages/existing-docs/api-status-codes.html">API status codes</a></p></li>
 			<li><p>A sample big page with nested ordered and unordered lists: <a href="/pages/existing-docs/quickstart.html">quickstart</a></p></li>
